# delivery

./: .env  README.md  docker-compose.dev.yml
backend/: .dockerignore  Dockerfile  db.sqlite3  pyproject.toml  run.sh  urls.py
backend/api/: serializers.py  tests.py  urls.py  views.py
backend/config/: redis.py  settings.py
backend/core/: admin.py  apps.py  tests.py
backend/core/migrations/: 0001_initial.py  0002_initial.py
backend/core/models/: __init__.py  dish.py  order.py  order_item.py  restaurant.py
backend/users/: admin.py  forms.py  models.py  tests.py
backend/users/migrations/: 0001_initial.py
